Tweaked the section titles for all exercises

--- a/Wednesday/Exercise_2/umbrella_sampling.ipynb
+++ b/Wednesday/Exercise_2/umbrella_sampling.ipynb
@@ -3390,7 +3390,7 @@
     }
    },
    "source": [
-    "## 4. Reference(s)\n",
+    "## Reference(s)\n",
     "- The paper that proposed MBAR: [Shirts, Michael R. \"Reweighting from the mixture distribution as a better way to describe the Multistate Bennett Acceptance Ratio.\" arXiv preprint arXiv:1704.00891 (2017).](https://aip.scitation.org/doi/abs/10.1063/1.2978177)\n",
     "- Another perspective of interpreting the theory of MBAR: [Shirts, Michael R. \"Reweighting from the mixture distribution as a better way to describe the Multistate Bennett Acceptance Ratio.\" arXiv preprint arXiv:1704.00891 (2017).](https://arxiv.org/abs/1704.00891)\n",
     "- A review about umbrella sampling: [Kästner, Johannes. \"Umbrella sampling.\" Wiley Interdisciplinary Reviews: Computational Molecular Science 1.6 (2011): 932-942.](https://doi.org/10.1002/wcms.66)"
