--- a/Wednesday/Exercise_3/multi_metadynamics.ipynb
+++ b/Wednesday/Exercise_3/multi_metadynamics.ipynb
@@ -1070,7 +1070,7 @@
     }
    },
    "source": [
-    "## 3. Reference(s)\n",
+    "## Reference(s)\n",
     "- The paper that proposed multiple walkers metadynamics: [Raiteri, Paolo, et al. \"Efficient reconstruction of complex free energy landscapes by multiple walkers metadynamics.\" The journal of physical chemistry B 110.8 (2006): 3533-3539.](https://pubs.acs.org/doi/10.1021/jp054359r)"
    ]
   },
