--- a/Wednesday/Exercise_4/HREMD.ipynb
+++ b/Wednesday/Exercise_4/HREMD.ipynb
@@ -1362,7 +1362,7 @@
     }
    },
    "source": [
-    "## 4. References\n",
+    "## References\n",
     "- The paper that proposed the replica-exchange framework: [Sugita, Yuji, and Yuko Okamoto. \"Replica-exchange molecular dynamics method for protein folding.\" Chemical physics letters 314.1-2 (1999): 141-151.](https://doi.org/10.1016/S0009-2614(99)01123-9)\n",
     "- The paper that proposed Hamiltonian replica exchange: [Sugita, Yuji, Akio Kitao, and Yuko Okamoto. \"Multidimensional replica-exchange method for free-energy calculations.\" The Journal of chemical physics 113.15 (2000): 6042-6051.](https://doi.org/10.1063/1.1308516)\n",
     "- An excellent review on alchemical free energy methods: [Mey, Antonia SJS, et al. \"Best practices for alchemical free energy calculations.\" arXiv preprint arXiv:2008.03067 (2020).](https://doi.org/10.33011/livecoms.2.1.18378)"
