Edited Section 4-3 in Exercise 5

--- a/Wednesday/Exercise_5/REUS.ipynb
+++ b/Wednesday/Exercise_5/REUS.ipynb
@@ -3699,7 +3699,7 @@
    },
    "source": [
     "For a one-dimensional simple harmonic potential with a force constant $K$, it can be dervied that its probability distribution is a normal distribution: $$P(x)=\\sqrt{\\frac{\\beta K}{2\\pi}}\\exp\\left (-\\frac{\\beta K}{2}(x-x_0)^2\\right)$$ and the corresponding standard deviation is $\\sigma=1/\\sqrt{\\beta K}$. (See [this post](https://weitsehsu.com/course/advanced_sampling/intro/) for how this is dervied.) Although the system we are using here is more than just a harmonic potential since there are also interatomic potentials involved in the Boltzmann distribution, the relationship above can still give a rough estimate of the distribution spread given a force constant, epsecially when the biased harmonic potential is relatively large compared to the contribution of the system potential itself. This can happen when\n",
-    "- A really lareg force constant is used.\n",
+    "- A really large force constant is used.\n",
     "- The immobile group and the pull group is far away from each other. "
    ]
   },
@@ -3713,6 +3713,18 @@
    },
    "source": [
     "For example, in the case where we use $K=50000$, the relationship $\\sigma = 1/\\sqrt{\\beta K}$ yields an estimate of 0.007 nm for the standard deviation of the ion-pair distance, which is pretty close to what we got from the simulation. On the other hnad, the estimates (0.07 nm) of the standard devaitions for the case where $K=500$ are not as good because the biased potential is not large enough to shield the contribution from the interatomic potentials in the Boltzmann distribution. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8f24b81",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "Such estimates can help us decide how large the force constant should be. For example, the spacing between windows we have in this exercise is 0.05 nm. To have a non-zero overlap between neighboring distributions, $3\\sigma$ should at least be larger than 0.025 nm, which means that the force constant should not exceed 36000 $\\mathrm{kJ/mol/nm^2}$. To have a \"sufficient\" overlap, having $3\\sigma$ around one spacing (0.05 nm) is generally a good starting point, which yields a force constant of 9000 $\\mathrm{kJ/mol/nm^2}$. In this exercise, I tried to make the spread a little wider by using a slighly smaller force constant of 8000 $\\mathrm{kJ/mol/nm^2}$."
    ]
   },
   {
