--- a/Wednesday/Exercise_3/multi_metadynamics.ipynb
+++ b/Wednesday/Exercise_3/multi_metadynamics.ipynb
@@ -14,6 +14,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1e03ed60",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Instructor/Author\n",
+    "Wei-Tse Hsu\n",
+    "- University of Colorado Boulder\n",
+    "- www.weitsehsu.com\n",
+    "- wehs7661@colorado.edu\n",
+    "- [@WeiTseHsu](https://twitter.com/WeiTseHsu)\n",
+    "\n",
+    "If you're interested, check my personal website for more future posts/tutorials about advanced sampling methods!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "44ccb040",
    "metadata": {
     "slideshow": {
