Refined Section 4-3 in Exercise 5

--- a/Wednesday/Exercise_5/REUS.ipynb
+++ b/Wednesday/Exercise_5/REUS.ipynb
@@ -3717,9 +3717,9 @@
     }
    },
    "source": [
-    "For a one-dimensional simple harmonic potential with a force constant $K$, it can be dervied that its probability distribution is a normal distribution: $$P(x)=\\sqrt{\\frac{\\beta K}{2\\pi}}\\exp\\left (-\\frac{\\beta K}{2}(x-x_0)^2\\right)$$ and the corresponding standard deviation is $\\sigma=1/\\sqrt{\\beta K}$. (See [this post](https://weitsehsu.com/course/advanced_sampling/intro/#exercise-2) for how this is dervied.) Although the system we are using here is more than just a harmonic potential since there are also interatomic potentials involved in the Boltzmann distribution, the relationship above can still give a rough estimate of the distribution spread given a force constant, epsecially when the biased harmonic potential is relatively large compared to the contribution of the system potential itself. This can happen when\n",
+    "For a one-dimensional simple harmonic potential with a force constant $K$, it can be dervied that its probability distribution is a normal distribution: $$P(x)=\\sqrt{\\frac{\\beta K}{2\\pi}}\\exp\\left (-\\frac{\\beta K}{2}(x-x_c)^2\\right)$$ and the corresponding standard deviation is $\\sigma=1/\\sqrt{\\beta K}$. (See [this post](https://weitsehsu.com/course/advanced_sampling/intro/#exercise-2) for how this is dervied.) Although the system we are using here is more than just a harmonic potential since there are also interatomic potentials involved in the Boltzmann distribution, the relationship above can still give a rough estimate of the distribution spread given a force constant, epsecially when the biased harmonic potential is relatively large compared to the contribution of the system potential itself. This can happen when\n",
     "- A really large force constant is used.\n",
-    "- The immobile group and the pull group is far away from each other. "
+    "- The immobile group and the pull group are far away from each other. "
    ]
   },
   {
@@ -3743,7 +3743,23 @@
     }
    },
    "source": [
-    "Such estimates can help us decide how large the force constant should be. For example, the spacing between windows we have in this exercise is 0.05 nm. To have a non-zero overlap between neighboring distributions, $3\\sigma$ should at least be larger than 0.025 nm, which means that the force constant should not exceed 36000 $\\mathrm{kJ/mol/nm^2}$. To have a \"sufficient\" overlap, having $3\\sigma$ around one spacing (0.05 nm) is generally a good starting point, which yields a force constant of 9000 $\\mathrm{kJ/mol/nm^2}$. In this exercise, I tried to make the spread a little wider by using a slighly smaller force constant of 8000 $\\mathrm{kJ/mol/nm^2}$."
+    "Such estimates can help us decide how large the force constant should be. For example, the spacing between windows we have in this exercise is 0.05 nm. (This can be decided by the CV range you want to sample, and the number of umbrella potentials based on the number or cores/nodes you have, as we discussed in the lecture/Exercise 2.) To have a non-zero overlap between neighboring distributions, $3\\sigma$ should at least be larger than 0.025 nm, which means that the force constant should not exceed 36000 $\\mathrm{kJ/mol/nm^2}$. To have a \"sufficient\" overlap, having $3\\sigma$ around one spacing (0.05 nm) is generally a good starting point, which yields a force constant of 9000 $\\mathrm{kJ/mol/nm^2}$. In this exercise, I tried to make the spread a little wider by using a slighly smaller force constant of 8000 $\\mathrm{kJ/mol/nm^2}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b582d72a",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "Notably, for an N-dimensional harmonic potential $U(x_1, x_2, ..., x_N) = \\frac{1}{2}K \\left ( (x_1-x_{c, 1})^2 + (x_2 - x_{c, 2})^2 + ... + (x_N - x_{c, N})^2 \\right )$, the probability distribution can be expressed below:\n",
+    "\n",
+    "$$P(x_1, x_2, ..., x_N)=\\left (\\frac{\\beta K}{2\\pi}\\right )^{\\frac{N}{2}}\\exp\\left (-\\frac{\\beta K}{2}(x_1-x_{c, 1})^2\\right)\\exp\\left (-\\frac{\\beta K}{2}(x_2-x_{c, 2})^2\\right)... \\exp\\left (-\\frac{\\beta K}{2}(x_N-x_{c, N})^2\\right)$$ \n",
+    "\n",
+    "from which you can estimate the force constant in difference CV directions if you are using multiple CVs in your umbrella sampling or REUS simulations. "
    ]
   },
   {
