Fixed a few typos

--- a/Wednesday/Exercise_5/REUS.ipynb
+++ b/Wednesday/Exercise_5/REUS.ipynb
@@ -2595,7 +2595,7 @@
     }
    },
    "source": [
-    "As shown above, all distributions moved towards to the nearest metastable states since the force constant was too small to fix them. We can further examine their means and standard deviations as below:"
+    "As shown above, all distributions moved towards to the nearest metastable states since the force constant was too small to fix them."
    ]
   },
   {
@@ -3682,6 +3682,18 @@
     "plt.xlabel('Ion-pair distance (nm)')\n",
     "plt.ylabel('Count')\n",
     "plt.grid()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b32d58ee",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "Given a large force constant used for each umbrella potential this time, each distribution barely drifted away from the desired center, but there is also no overlap between neighboring states as the spread of each distribution is narrower."
    ]
   },
   {
