--- a/Wednesday/Exercise_2/umbrella_sampling.ipynb
+++ b/Wednesday/Exercise_2/umbrella_sampling.ipynb
@@ -3410,7 +3410,7 @@
    },
    "source": [
     "## Reference(s)\n",
-    "- The paper that proposed MBAR: [Shirts, Michael R. \"Reweighting from the mixture distribution as a better way to describe the Multistate Bennett Acceptance Ratio.\" arXiv preprint arXiv:1704.00891 (2017).](https://aip.scitation.org/doi/abs/10.1063/1.2978177)\n",
+    "- The paper that proposed MBAR: [Shirts, Michael R., and John D. Chodera. \"Statistically optimal analysis of samples from multiple equilibrium states.\" The Journal of chemical physics 129.12 (2008): 124105.](https://aip.scitation.org/doi/abs/10.1063/1.2978177)\n",
     "- Another perspective of interpreting the theory of MBAR: [Shirts, Michael R. \"Reweighting from the mixture distribution as a better way to describe the Multistate Bennett Acceptance Ratio.\" arXiv preprint arXiv:1704.00891 (2017).](https://arxiv.org/abs/1704.00891)\n",
     "- A review about umbrella sampling: [Kästner, Johannes. \"Umbrella sampling.\" Wiley Interdisciplinary Reviews: Computational Molecular Science 1.6 (2011): 932-942.](https://doi.org/10.1002/wcms.66)"
    ]
@@ -3471,7 +3471,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -3485,7 +3485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
